[package]
name = "groslaur"
authors = ["Romain Chardiny <romain.chardiny@gmail.com>"]
license = "MIT"
version = "0.1.0"
description = "Shitty AUR helper"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.26", features = ["derive"] }
colored = "2.0.4"
reqwest = { version = "0.12.12", features = ["blocking", "json", "gzip", "deflate", "zstd", "brotli" ] }
serde = { version = "1.0.193", features = ["derive"] }
